[gd_scene load_steps=41 format=3 uid="uid://oc13h3au02ro"]

[ext_resource type="Script" path="res://modules/player/player_character.gd" id="1_h0t42"]
[ext_resource type="AudioStream" uid="uid://dyeojb4i6dg83" path="res://sounds/vostok-handgun.ogg" id="2_spvge"]
[ext_resource type="AudioStream" uid="uid://540t7el1enl2" path="res://sounds/vostokfootsteps/fc1.ogg" id="3_8bcfi"]
[ext_resource type="Script" path="res://addons/spatial_audio_3d/spatial_audio_3d.gd" id="3_lkaml"]
[ext_resource type="AudioStream" uid="uid://cl7p8sjlaxube" path="res://sounds/vostok-rifle.ogg" id="4_2su0d"]
[ext_resource type="AudioStream" uid="uid://fg2xvivryw1g" path="res://sounds/vostokfootsteps/fc2.ogg" id="4_eeerb"]
[ext_resource type="AudioStream" uid="uid://2yycby5imeka" path="res://sounds/testsignal-sine440-60s.ogg" id="5_snn5e"]
[ext_resource type="AudioStream" uid="uid://c6d574n4yufub" path="res://sounds/vostokfootsteps/fc3.ogg" id="5_ybqrp"]
[ext_resource type="AudioStream" uid="uid://c8s0ot5k0wobu" path="res://sounds/testsignal-sawtooth.ogg" id="6_b4mwg"]
[ext_resource type="AudioStream" uid="uid://dn8r64vqwe6pd" path="res://sounds/vostokfootsteps/fc4.ogg" id="6_hu4yg"]
[ext_resource type="AudioStream" uid="uid://5p2x55md3b7o" path="res://sounds/testsignal-whitenoise-60s.ogg" id="7_3ammn"]
[ext_resource type="AudioStream" uid="uid://chv7jfnybg7vf" path="res://sounds/vostokfootsteps/fc5.ogg" id="7_wl3o6"]
[ext_resource type="AudioStream" uid="uid://ckn8hxwk3kfex" path="res://sounds/Benny Greb Drum Solo - Drumeo.ogg" id="8_1760n"]
[ext_resource type="AudioStream" uid="uid://d4f7boceveppw" path="res://sounds/vostokfootsteps/fc6.ogg" id="8_f2o1f"]
[ext_resource type="AudioStream" uid="uid://btxuh4fmhvb6x" path="res://sounds/vostokfootsteps/fc7.ogg" id="9_dhr5h"]
[ext_resource type="AudioStream" uid="uid://d3hpnb6eugqsi" path="res://sounds/Speech audio quality test.ogg" id="13_322ks"]
[ext_resource type="Script" path="res://modules/player/help_screen.gd" id="17_g4b8j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_73v4a"]
radius = 0.3
height = 1.7

[sub_resource type="Animation" id="Animation_6o48i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.85, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.55, 0)]
}

[sub_resource type="Animation" id="Animation_wh4u2"]
resource_name = "crouch_air"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.25, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.55, 0)]
}

[sub_resource type="Animation" id="Animation_k4k07"]
resource_name = "crouch_ground"
length = 0.001
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyCollision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.45, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.75, 0)]
}

[sub_resource type="Animation" id="Animation_6o8hu"]
resource_name = "crouch_reset"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyCollision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.85, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.55, 0)]
}

[sub_resource type="Animation" id="Animation_v5xwa"]
resource_name = "lean_left"

[sub_resource type="Animation" id="Animation_0c5qk"]
resource_name = "lean_left_collision"

[sub_resource type="Animation" id="Animation_5qee8"]
resource_name = "lean_reset"

[sub_resource type="Animation" id="Animation_5n858"]
resource_name = "lean_right"

[sub_resource type="Animation" id="Animation_2fwsm"]
resource_name = "lean_right_collision"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ity6x"]
_data = {
"RESET": SubResource("Animation_6o48i"),
"crouch_air": SubResource("Animation_wh4u2"),
"crouch_ground": SubResource("Animation_k4k07"),
"crouch_reset": SubResource("Animation_6o8hu"),
"lean_left": SubResource("Animation_v5xwa"),
"lean_left_collision": SubResource("Animation_0c5qk"),
"lean_reset": SubResource("Animation_5qee8"),
"lean_right": SubResource("Animation_5n858"),
"lean_right_collision": SubResource("Animation_2fwsm")
}

[sub_resource type="LabelSettings" id="LabelSettings_jdne1"]
font_size = 24
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_funb5"]
streams_count = 7
stream_0/stream = ExtResource("3_8bcfi")
stream_1/stream = ExtResource("4_eeerb")
stream_2/stream = ExtResource("5_ybqrp")
stream_3/stream = ExtResource("6_hu4yg")
stream_4/stream = ExtResource("7_wl3o6")
stream_5/stream = ExtResource("8_f2o1f")
stream_6/stream = ExtResource("9_dhr5h")

[sub_resource type="LabelSettings" id="LabelSettings_7l12j"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2qgoj"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_26maw"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x07hd"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_juopl"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_logq2"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8pqcw"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ch3xc"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_peib7"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sxn4h"]
font_size = 22

[node name="Player_Character" type="CharacterBody3D" node_paths=PackedStringArray("main_camera")]
collision_layer = 2
floor_max_angle = 0.872665
script = ExtResource("1_h0t42")
main_camera = NodePath("Camera/MainCamera")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Camera" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0)
metadata/_edit_lock_ = true

[node name="MainCamera" type="Camera3D" parent="Camera"]
unique_name_in_owner = true
cull_mask = 524287
doppler_tracking = 2
current = true
metadata/_edit_lock_ = true

[node name="InteractionRaycast" type="RayCast3D" parent="Camera"]
transform = Transform3D(5, 0, 0, 0, 0.868239, -4.92404, 0, 4.92404, 0.868239, 0, 0, 0)
visible = false
collision_mask = 2
metadata/_edit_lock_ = true

[node name="InteractionPoint" type="ColorRect" parent="Camera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = 76.0
offset_right = 2.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_73v4a")
metadata/_edit_lock_ = true

[node name="CharacterAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ity6x")
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ActionText" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "ActionText"
label_settings = SubResource("LabelSettings_jdne1")
horizontal_alignment = 1

[node name="Gunshot" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
stream = ExtResource("2_spvge")
max_polyphony = 3
script = ExtResource("3_lkaml")
reverb_volume_db = 0.0
metadata/_edit_lock_ = true

[node name="Rifleshot" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
stream = ExtResource("4_2su0d")
max_polyphony = 3
script = ExtResource("3_lkaml")
reverb_volume_db = 0.0
metadata/_edit_lock_ = true

[node name="Sinewave" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
stream = ExtResource("5_snn5e")
max_polyphony = 3
script = ExtResource("3_lkaml")
reverb_volume_db = 0.0
metadata/_edit_lock_ = true

[node name="Sawtooth" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
stream = ExtResource("6_b4mwg")
max_polyphony = 3
script = ExtResource("3_lkaml")
reverb_volume_db = 0.0
metadata/_edit_lock_ = true

[node name="Whitenoise" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
stream = ExtResource("7_3ammn")
max_polyphony = 3
script = ExtResource("3_lkaml")
reverb_volume_db = 0.0
metadata/_edit_lock_ = true

[node name="Footsteps concrete" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
stream = SubResource("AudioStreamRandomizer_funb5")
volume_db = -16.0
max_polyphony = 3
script = ExtResource("3_lkaml")
reverb_volume_db = 0.0
bass_proximity = 0
metadata/_edit_lock_ = true

[node name="Drumset" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("8_1760n")
script = ExtResource("3_lkaml")
reverb_volume_db = 12.0
reverb_fadeintime = 0.2
reverb_fadeouttime = 0.5
audiophysics_ticks = 30
metadata/_edit_lock_ = true

[node name="Speechtest" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("13_322ks")
script = ExtResource("3_lkaml")
reverb_volume_db = -9.0
bass_proximity = 0
metadata/_edit_lock_ = true

[node name="WeaponsBar" type="GridContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -33.0
offset_right = 1202.0
offset_bottom = -10.0
grow_vertical = 0
columns = 10

[node name="Gun" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1 Gun"
label_settings = SubResource("LabelSettings_7l12j")

[node name="Rifle" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "2 Rifle"
label_settings = SubResource("LabelSettings_2qgoj")

[node name="Sinewave" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "3 Sinewave"
label_settings = SubResource("LabelSettings_26maw")

[node name="Sawtooth" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "4 Sawtooth"
label_settings = SubResource("LabelSettings_x07hd")

[node name="Whitenoise" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "5 Whitenoise"
label_settings = SubResource("LabelSettings_juopl")

[node name="Soundcapsule" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "6 Soundcapsule"
label_settings = SubResource("LabelSettings_logq2")

[node name="ProgressBar" type="ProgressBar" parent="WeaponsBar/Soundcapsule"]
custom_minimum_size = Vector2(20, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -133.0
offset_right = 70.0
offset_bottom = -33.0
grow_vertical = 0
value = 40.0
fill_mode = 3

[node name="Footsteps" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "7 Footsteps"
label_settings = SubResource("LabelSettings_8pqcw")

[node name="Drumset" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "8 Drumset"
label_settings = SubResource("LabelSettings_ch3xc")

[node name="Speechtest" type="Label" parent="WeaponsBar"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "9 Speechtest"
label_settings = SubResource("LabelSettings_peib7")

[node name="Help Screen" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("17_g4b8j")

[node name="ColorRect" type="ColorRect" parent="Help Screen"]
custom_minimum_size = Vector2(400, 330)
layout_mode = 2
color = Color(0, 0, 0, 0.627451)

[node name="VBoxContainer" type="VBoxContainer" parent="Help Screen/ColorRect"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 241.0
offset_bottom = 206.0

[node name="Title" type="Label" parent="Help Screen/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Help"
label_settings = SubResource("LabelSettings_sxn4h")

[node name="HBoxContainer" type="HBoxContainer" parent="Help Screen/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Help Screen/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "h
[Right click]

w a s d
[Shift]
[Alt]

[Left click]

1 - 6
[Scroll]
7 - 9"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="Help Screen/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show/hide this help screen
Show cursor

Move
Sprint
Turbo

Play / interact

Select sound
Adjust Soundcapsule launch speed
Toggle sound"
fit_content = true
scroll_active = false
autowrap_mode = 0
